--- a/src/App.css
+++ b/src/App.css
@@ -15,19 +15,19 @@
   max-height: 80vh;
 }
 
-/*
-#iceLeft {
+
+/* #iceLeft {
   animation: clink .8s infinite ease;
   opacity: 0.6;
   transform-origin: 36px 66px;
-}
+} */
 
-#iceRight {
+/* #iceRight {
   animation: clink .8s .2s infinite ease;
   opacity: 0.6;
   transform-origin: 60px 78px;
-}
-*/
+} */
+
 
 .meals > .logo {
   animation: shake 1.5s infinite ease;
