css inicial tela de login

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.meals {
+/* .meals {
   align-items: center;
   background: #0fa36b;
   color: #464646;
@@ -8,12 +8,12 @@
   height: 100vh;
   justify-content: center;
   width: 100%;
-}
+} */
 
-.rocksGlass {
+/* .rocksGlass {
   animation: shake 1s infinite ease;
   max-height: 80vh;
-}
+} */
 
 
 /* #iceLeft {
@@ -29,13 +29,13 @@
 } */
 
 
-.meals > .logo {
+/* .meals > .logo {
   animation: shake 1.5s infinite ease;
   color: aliceblue;
   font-family: Montserrat , sans-serif;
   font-size: 3em;
   font-weight: 900;
-}
+} */
 
 @keyframes shake {
 
