--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,48 +1,47 @@
 .container {
-  background-color: #41197F;
-  background-image: url(../images/logo.svg);
-  background-repeat: no-repeat;
+  background-color: #41197f;
+  background-image: url('../images/logo.svg');
   background-position: center;
+  background-repeat: no-repeat;
   height: 50vh;
   width: 100vw;
 }
 
 .img-container {
-  background-image: url(../images/tomate.svg);
-  position: absolute;
-  /* top: 10%; */
-  bottom: 33%;
-  left: 0;
+  background-image: url('../images/tomate.svg');
   background-repeat: no-repeat;
   background-size: 100vw 40vh;
-  width: 100%;
+  bottom: 33%;
+  filter: drop-shadow(0 7px 15px rgba(68, 73, 85, 0.25));
   height: 40vh;
-  filter: drop-shadow(0px 7px 15px rgba(68, 73, 85, 0.25));
+  left: 0;
+  position: absolute;
+  width: 100%;
 }
 
 .form-input {
-  border: 0.5px solid #41197F;
+  border: 0.5px solid #41197f;
   border-radius: 5px;
 }
 
 .form-input::placeholder {
-  color: #41197F;
-  font-family: 'Epilogue';
+  color: #41197f;
+  font-family: Epilogue , sans-serif;
+  font-size: 14px;
   font-style: normal;
   font-weight: 300;
-  font-size: 14px;
   line-height: 14px;
 }
 
 form {
-  background-color: #F5F5F5;
-  width: 100vw;
-  height: 50vh;
+  align-items: center;
+  background-color: whitesmoke;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   gap: 10px;
+  height: 50vh;
+  justify-content: center;
+  width: 100vw;
 }
 
 form div {
@@ -50,30 +49,28 @@ form div {
 }
 
 form h1 {
-  font-family: 'Epilogue';
+  color: #41197f;
+  font-family: Epilogue , sans-serif;
+  font-size: 20px;
   font-style: italic;
   font-weight: 500;
-  font-size: 20px;
-  line-height: 20px;
-
-  text-align: center;
   letter-spacing: 0.165em;
+  line-height: 20px;
+  text-align: center;
   text-transform: uppercase;
-
-  color: #41197F;
 }
 
 .btn-login {
-  background: #FCC436;
-  border-radius: 5px;
+  background: #fcc436;
   border: 0;
-  color: #FFFFFF;
-  width: 100%;
+  border-radius: 5px;
+  color: white;
   padding: 5px;
+  width: 100%;
 }
 
 .btn-login:disabled {
-  background-color: #FCC436;
-  color: #FFFFFF;
+  background-color: #fcc436;
+  color: white;
   opacity: 0.8;
 }
