--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,17 @@
 footer {
+  background: #41197f;
   bottom: 0;
   display: flex;
   justify-content: space-between;
+  padding: 8px 30px;
   position: fixed;
+  width: 100%;
 }
+
+.btn-footer {
+  background: #fcc436;
+  border: none;
+  border-radius: 50%;
+  padding: 8px;
+}
+
