--- a/src/styles/RecipeDetails.css
+++ b/src/styles/RecipeDetails.css
@@ -1,7 +1,3 @@
-.recipe-details-container {
-
-}
-
 .recipe-details-img-container {
   position: relative;
   top: 0;
@@ -15,13 +11,55 @@
 
 .recipe-header {
   display: flex;
-  width: 100vw;
   position: absolute;
   top: 0;
+  width: 100vw;
   z-index: 1;
 }
 
 iframe {
-  width: 100vw;
   height: 300px;
+  width: 100vw;
+}
+
+.recomend-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: 30px 0 80px 3vw;
+}
+
+.recomended {
+  display: flex;
+  gap: 12px;
+  overflow-x: scroll;
+  width: 95vw;
+}
+
+.start-recipe-btn {
+  background: #fcc436;
+  border: none;
+  border-radius: 5px;
+  bottom: 0;
+  color: white;
+  font-family: Epilogue , sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  left: 5vw;
+  letter-spacing: 0.03em;
+  margin-bottom: 10px;
+  padding: 10px;
+  position: fixed;
+  text-align: center;
+  text-transform: uppercase;
+  width: 90vw;
+}
+
+.none {
+  display: none;
+}
+
+.recipe-top-btns {
+  background: none;
+  border: none;
 }
