--- a/src/styles/RecipeInProgress.css
+++ b/src/styles/RecipeInProgress.css
@@ -1,14 +1,14 @@
 .ul-container label {
-  width: 90%;
-  padding: 2px;
   margin-left: 15px;
+  padding: 2px;
+  width: 90%;
 }
 
 .ul-container input {
+  accent-color: #fcc436;
   margin-right: 5px;
-  accent-color: #FCC436;
 }
 
-label:has(input[type="checkbox"]:checked) {
+label:has( input:checked ) {
   text-decoration: line-through;
 }
