--- a/src/styles/DoneRecipes.css
+++ b/src/styles/DoneRecipes.css
@@ -4,66 +4,66 @@ a {
 
 .done-btns-container {
   display: flex;
-  justify-content: center;
   gap: 20px;
+  justify-content: center;
   margin: 30px 10px;
 }
 
 .done-btns-container img {
-  width: 70px
+  width: 70px;
 }
 
 .done-recipes-container {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 20px;
   margin-top: 20px;
 }
 
 .done-recipe {
+  background: white;
+  border: 0.518px solid #b1b1b1;
+  border-radius: 5px;
   display: flex;
   width: 90vw;
-  background: white;
-  border: 0.517989px solid #B1B1B1;
-  border-radius: 5px;
 }
 
 .info-done-container {
   display: flex;
   flex-direction: column;
-  height: 45vw;
-  padding: 20px 10px 20px 20px;
-  gap: 30px;
   font-family: Epilogue , sans-serif;
   font-style: normal;
+  gap: 30px;
+  height: 45vw;
+  padding: 20px 10px 20px 20px;
 }
 
 .done-title-container {
-  display: flex;
   align-items: flex-start;
+  display: flex;
   line-height: 15px;
 }
 
 .done-title-container p {
-  font-weight: 700;
+  color: #1a1b1c;
   font-size: 16px;
+  font-weight: 700;
   line-height: 12px;
-  color: #1A1B1C;
   margin-top: 10px;
 }
 
 .done-title-container span {
-  font-weight: 300;
+  color: #797d86;
   font-size: 13px;
+  font-weight: 300;
   line-height: 9px;
   text-align: center;
-  color: #797D86;
 }
 
 .done-recipe img {
+  border-radius: 5px 0;
   width: 45vw;
-  border-radius: 5px 0px 0px 5px;
 }
 
 .done-recipe button img {
@@ -71,8 +71,8 @@ a {
 }
 
 .done-date {
-  font-weight: 400;
+  color: #1a1b1c;
   font-size: 12px;
+  font-weight: 400;
   line-height: 9px;
-  color: #1A1B1C;
 }
