--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -5,7 +5,8 @@
   font-family: Epilogue , sans-serif;
   font-size: 20px;
   font-style: normal;
-  height: 60vh;
+  height: 100vh;
+  width: 390px;
   justify-content: flex-start;
 }
 
