--- a/src/styles/RecipeDetails.css
+++ b/src/styles/RecipeDetails.css
@@ -4,6 +4,7 @@
   height: 30vh;
   position: absolute;
   width: 100vw;
+  max-width: 380px;
 }
 
 .recipe-details-container {
@@ -48,7 +49,7 @@
   font-size: 30px;
   font-style: normal;
   font-weight: 900;
-  left: 35%;
+  left: 140px;
   letter-spacing: 0.105em;
   line-height: 30px;
   margin: auto;
@@ -56,7 +57,6 @@
   text-align: center;
   text-transform: uppercase;
   top: 23vh;
-  width: 30vw;
   z-index: 1;
 }
 
@@ -83,6 +83,7 @@
 iframe {
   height: 300px;
   width: 90vw;
+  max-width: 340px;
 }
 
 .recomend-container {
@@ -96,7 +97,6 @@ iframe {
   display: flex;
   gap: 15px;
   overflow-x: scroll;
-  width: 95vw;
 }
 
 .start-recipe-btn {
@@ -108,14 +108,14 @@ iframe {
   font-family: Epilogue , sans-serif;
   font-style: normal;
   font-weight: 700;
-  left: 5vw;
   letter-spacing: 0.03em;
   margin-bottom: 10px;
   padding: 10px;
   position: fixed;
   text-align: center;
   text-transform: uppercase;
-  width: 90vw;
+  width: 100%;
+  max-width: 340px;
 }
 
 .none {
