--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -6,6 +6,8 @@
   flex-direction: column;
   gap: 5px;
   justify-content: center;
+  max-width: 370px;
+  padding-top: 10px;
 }
 
 .search-input {
@@ -15,6 +17,7 @@
   height: 30px;
   padding: 20px;
   width: 90vw;
+  max-width: 330px;
 }
 
 .search-second-container {
@@ -26,6 +29,7 @@
   gap: 10px;
   justify-content: center;
   padding: 10px;
+  max-width: 370px;
 }
 
 .radio-input-container {
@@ -40,6 +44,7 @@
   justify-content: space-between;
   line-height: 9px;
   width: 67vw;
+  max-width: 350px;
 }
 
 .radio-input-container span {
@@ -59,4 +64,5 @@
   text-align: center;
   text-transform: uppercase;
   width: 67vw;
+  max-width: 360px;
 }
